# hephaestus-engine

./: .gitignore  .gitmodules  CMakeLists.txt
examples/asteroids/assets/: collisionMatrix.csv
examples/asteroids/assets/prefabs/: asteroid.prefab.json  bullet.prefab.json
examples/asteroids/assets/scenes/: 0001_first_stage.scene.json
examples/asteroids/assets/scripts/: Asteroid.hpp  AsteroidSpawner.hpp  Bullet.hpp  GameManager.hpp  Player.hpp
include/hph/: behavior.hpp  bounds.hpp  camera.hpp  collision2d.hpp  component.hpp  gameobject.hpp  hphobject.hpp  input.hpp  layermask.hpp  linalg.hpp  monobehaviour.hpp  particlesystem.hpp  random.hpp  rigidbody2d.hpp  screen.hpp  sprite.hpp  spriterenderer.hpp  text.hpp  transform.hpp
include/hph/core/: shader.hpp
src/: exceptions.hpp  game.hpp  gameobjectiterator.hpp  initialization.cpp  initialization.hpp  main.cpp  scene.hpp  spriterendereriterator.hpp
